# Self-contained: dependencies are fetched from GitHub, no sibling checkout
# required. `quadruped-gait` and `misarta` come from the `articara` repo
# (same git source so their shared `misarta` type unifies — `quadruped-gait`
# uses `misarta` internally, which is articara's submodule); the Unitree SDK
# comes from `unitree-sdk-rs`. Fetching uses the system git (see
# `.cargo/config.toml`) so the `github.com-takarakasai` SSH host alias and
# the misarta submodule resolve.
[package]
name = "go2-gait-runner"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Headless CLI to run articara/quadruped-gait controllers on a real Unitree Go2 — low-level rt/lowcmd at 500 Hz via unitree-sdk-rs."

[dependencies]
quadruped-gait = { git = "ssh://git@github.com-takarakasai/takarakasai/articara.git", package = "quadruped-gait" }
misarta = { git = "ssh://git@github.com-takarakasai/takarakasai/articara.git", package = "misarta" }
unitree-go2 = { git = "ssh://git@github.com-takarakasai/takarakasai/unitree-sdk-rs.git", package = "unitree-go2" }
unitree-rpc = { git = "ssh://git@github.com-takarakasai/takarakasai/unitree-sdk-rs.git", package = "unitree-rpc" }
nalgebra = "0.34.2"

# Own workspace root so cargo doesn't try to inherit a parent workspace.
[workspace]
