# Self-contained: dependencies are fetched from GitHub, no sibling checkout
# required. `quadruped-gait` comes from the `articara` repo; `misarta` is its
# own standalone repo (https://github.com/takarakasai/misarta.git) — the same
# git source `quadruped-gait` and `articara` use, so the shared `misarta` type
# unifies (cargo identifies a git source by its literal URL, so the `https://`
# form must match theirs exactly). The Unitree SDK comes from `unitree-sdk-rs`.
# Fetching uses the system git (see `.cargo/config.toml`) so the
# `github.com-takarakasai` SSH host alias resolves.
[package]
name = "go2-gait-runner"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Headless CLI to run articara/quadruped-gait controllers on a real Unitree Go2 — low-level rt/lowcmd at 500 Hz via unitree-sdk-rs."

[dependencies]
quadruped-gait = { git = "ssh://git@github.com/takarakasai/articara.git", package = "quadruped-gait" }
misarta = { git = "https://github.com/takarakasai/misarta.git" }
unitree-go2 = { git = "ssh://git@github.com/takarakasai/unitree-sdk-rs.git", package = "unitree-go2" }
unitree-rpc = { git = "ssh://git@github.com/takarakasai/unitree-sdk-rs.git", package = "unitree-rpc" }
nalgebra = "0.34.2"
# Live gait visualization (`--viz`): publish each tick's gait frame over Zenoh
# (pure-Rust pub/sub) for the articara GUI to render. Optional — disable with
# `--no-default-features` to drop Zenoh + its runtime from the build.
zenoh = { version = "1.9", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["viz"]
viz = ["dep:zenoh", "dep:serde_json", "quadruped-gait/viz"]

# Own workspace root so cargo doesn't try to inherit a parent workspace.
[workspace]
